# letvagas

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  manage.py  pyproject.toml  server.go
.github/workflows/: go.yml
database/: init.go  init_db.sql
entities/dto/: curriculum.go  management.go  user.go
entities/models/: management.go  profile.go  user.go
letvagas/: asgi.py  settings.py  urls.py  wsgi.py
services/: course.go  curriculum.go  education.go  experience.go  management.go  user.go  utils.go
static/css/: base.css
static/js/: modal.js
templates/layouts/: main.html
templates/views/: admin.html  curriculum.html  index.html  jobs.html  login.html  position.html  register.html
templates/views/admin/: add_position.html  applications.html  profile_search.html
templates/views/partials/: courses.html  educations.html  experiences.html  files.html  job_single.html  jobs.html  my_applications.html  questions.html
templates/views/partials/admin/: cities.html  questions.html  search_results.html  users.html
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py
web/: session.go
web/controllers/: auth.go  course.go  curriculum.go  education.go  experience.go  main.go  management.go
