[tool.poetry]
name = "letvagas"
version = "0.1.0"
description = "Grupo LET vagas"
authors = ["Diogo Lima"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
environs = {extras = ["django"], version = "^11.0.0"}
pillow = "^10.2.0"
gunicorn = "^21.2.0"
libsass = "^0.23.0"
django-compressor = "^4.4"
django-sass-processor = "^1.4"
django-htmx = "^1.17.3"
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
